Added new function and change main file
Added new function for paginate and search books by category. Changed the main file to index, just to keep a pattern.
